# deepin_assistant

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: architecture.md  demo-script.md  rfc-stage1.md  stage1-proposal.md
electron/: main.mjs  preload.mjs
packaging/: orbit-deepin-assistant.desktop
resources/: app.qrc
server/: index.mjs
src/: ActionExecutor.cpp  ActionExecutor.h  App.jsx  CommandRunner.cpp  CommandRunner.h  ContextCollector.cpp  ContextCollector.h  DiagnosticsService.cpp  DiagnosticsService.h  EmailComposer.cpp  EmailComposer.h  FloatingLauncher.cpp  FloatingLauncher.h  MainWindow.cpp  MainWindow.h  index.css  main.cpp
